--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.3.2
   dio: ^5.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
