--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.3.2
   dio: ^5.7.0
   intl: ^0.19.0
+  jwt_decode: ^0.3.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
