Fixed the Infinity Scroll Paganation can scroll down while has more data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/icons/splash_icon.png
     - assets/icons/exam_guard_logo.png
     - assets/images/teacher_avatar.png
+    - assets/images/avatar_2.jpg
     - assets/icons/id-card.png
     - assets/icons/name.png
 
