--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   intl: ^0.19.0
   jwt_decode: ^0.3.1
   jwt_decoder: ^2.0.1
+  image_picker: ^1.1.2
+  cloudinary_flutter: ^1.3.0
+  cloudinary_url_gen: ^1.6.0
+  cloudinary_public: ^0.23.1
 
 dev_dependencies:
   flutter_test:
