--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cloudinary_flutter: ^1.3.0
   cloudinary_url_gen: ^1.6.0
   cloudinary_public: ^0.23.1
+  crypto: ^3.0.5
 
 dev_dependencies:
   flutter_test:
