--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloudinary_url_gen: ^1.6.0
   cloudinary_public: ^0.23.1
   crypto: ^3.0.5
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,7 @@ flutter:
     - assets/images/avatar_2.jpg
     - assets/icons/id-card.png
     - assets/icons/name.png
+    - assets/lottie/delete_animation.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
