--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   cloudinary_public: ^0.23.1
   crypto: ^3.0.5
   lottie: ^3.1.3
+  google_mlkit_face_detection: ^0.12.0
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
