--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   lottie: ^3.1.3
   google_mlkit_face_detection: ^0.12.0
   camera: ^0.10.5+9
+  image: ^4.3.0
 
 dev_dependencies:
   flutter_test:
