--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   google_mlkit_face_detection: ^0.12.0
   camera: ^0.10.5+9
   image: ^4.3.0
+  socket_io_client: ^3.0.1
 
 dev_dependencies:
   flutter_test:
