Implement in app notification on tap

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,10 @@ android {
             buildConfigField "boolean", "ENABLE_LOGS", "true"
         }
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 flutter {
