Completed view gradle feature(student)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   socket_io_client: ^3.0.1
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  percent_indicator: ^4.2.4
 
 dev_dependencies:
   flutter_test:
@@ -90,6 +91,10 @@ flutter:
     - assets/icons/id-card.png
     - assets/icons/name.png
     - assets/lottie/delete_animation.json
+    - assets/lottie/success.json
+    - assets/lottie/fail.json
+    - assets/lottie/loading.json
+    - assets/lottie/error.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
