--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
   percent_indicator: ^4.2.4
+  shimmer: ^3.0.0
+  simple_pip_mode: ^1.0.0
 
 dev_dependencies:
   flutter_test:
