--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   percent_indicator: ^4.2.4
   shimmer: ^3.0.0
   simple_pip_mode: ^1.0.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
